<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">衣二三</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_loading">正在加载…</string>
    <string name="load_fail">加载失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="loading">正在加载...</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_done_label">Done</string>
    <string name="nomore_loading">没有了</string>
    <string name="popularity_look_no_attend">你还没有关注的人喔</string>
    <string name="popularity_look_no_new">暂时没有LOOK</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="refresh_done">刷新完成</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="refresh_ing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refreshing">正在刷新…</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="xn_action_Tchat">由于你长时间未进行会话,已经与客服断开连接</string>
    <string name="xn_ad_appraise_bad">不满意</string>
    <string name="xn_ad_appraise_good">满意</string>
    <string name="xn_ad_appraise_normal">一般</string>
    <string name="xn_ad_appraise_vb">非常不满意</string>
    <string name="xn_ad_appraise_vg">非常满意</string>
    <string name="xn_ad_questionstatus">问题解决状态</string>
    <string name="xn_adviseandfeedback">建议与反馈</string>
    <string name="xn_btn_no">否</string>
    <string name="xn_btn_yes">是</string>
    <string name="xn_cancel">取消</string>
    <string name="xn_cancel_queue">您好，是否放弃排队？</string>
    <string name="xn_chatActivity_tipString3">客服不在线 点击留言！</string>
    <string name="xn_chatActivity_tipString4">正在建立会话...</string>
    <string name="xn_chatActivity_tryout">(试用)</string>
    <string name="xn_chatlist_csgroupname">客服组名称</string>
    <string name="xn_chatlist_lastmsg">最后一条消息</string>
    <string name="xn_chatlist_lastmsgtime">最后一条消息时间</string>
    <string name="xn_chatpage_back1">返回</string>
    <string name="xn_chatpage_blacklist">该用户被加入黑名单，消息已被屏蔽！</string>
    <string name="xn_chatpage_kfname">在线客服</string>
    <string name="xn_chatpage_transferkefu">客服 张宁宁将 访客转接给您，是否接收该对话</string>
    <string name="xn_close_chat_session">确定结束对话</string>
    <string name="xn_confirm">确定</string>
    <string name="xn_consultation_text">咨询总结</string>
    <string name="xn_contact_provider">获取服务失败，请联系服务商！</string>
    <string name="xn_copy">复制</string>
    <string name="xn_copylink">复制链接</string>
    <string name="xn_custom_send">发送</string>
    <string name="xn_demoexit">退出</string>
    <string name="xn_evaluation_yesorno">是否解决</string>
    <string name="xn_find_mylocation">寻找我的位置</string>
    <string name="xn_fingerslip_totalk">手指上滑，取消发送</string>
    <string name="xn_functionSettingsBody4">常用语</string>
    <string name="xn_functionSettingsBody5">邀请评价</string>
    <string name="xn_functionSettingsBody6">黑名单</string>
    <string name="xn_functionSettingsBody7">咨询总结</string>
    <string name="xn_function_camera">拍照</string>
    <string name="xn_function_evaluate">评价</string>
    <string name="xn_function_order">订单</string>
    <string name="xn_function_picture">图片</string>
    <string name="xn_function_video">视频</string>
    <string name="xn_getservicefail">请求服务失败，请联系服务商</string>
    <string name="xn_histalk_last">上一次会话</string>
    <string name="xn_histalk_next">下一次会话</string>
    <string name="xn_historyinfo">以上是历史消息</string>
    <string name="xn_input_pe">请输入手机号码或者邮箱</string>
    <string name="xn_inputfunction_select">图片@拍照@评价</string>
    <string name="xn_inputleavemsg_maxsize">留言内容不能超过400个字符</string>
    <string name="xn_inputtext_size">您输入的字数已经超过了400字限制！</string>
    <string name="xn_inputvaluatuion_maxsize">评价内容不能超过200个字符</string>
    <string name="xn_kefu_inputing">正在输入...</string>
    <string name="xn_kefu_leave">您好！客服不在线</string>
    <string name="xn_kefu_leave2">您好！客服不在线，请留言</string>
    <string name="xn_kefu_versiontip">SDK版本号:</string>
    <string name="xn_leave">亲！客服不在线，请留言！</string>
    <string name="xn_leave_message">留言</string>
    <string name="xn_leave_queue">您好！客服忙碌中，您排在第</string>
    <string name="xn_leave_queue3">位请稍后或留言</string>
    <string name="xn_leave_queue4">位请稍后</string>
    <string name="xn_leavecolor_message">留言</string>
    <string name="xn_leavemesg_email_hint">邮箱</string>
    <string name="xn_leavemesg_name_hint">姓名</string>
    <string name="xn_leavemesg_tel_hint">电话</string>
    <string name="xn_leavemesg_words_hint">留言</string>
    <string name="xn_leavemesg_words_hint2">(必填) :</string>
    <string name="xn_leavemesg_words_hint3">(选填) :</string>
    <string name="xn_leavemsg_dialogback">返回</string>
    <string name="xn_leavesetting_confirm">确定</string>
    <string name="xn_leavingmsg">正在留言</string>
    <string name="xn_leavingmsg_notice">公告介绍：</string>
    <string name="xn_myimage_back">返回</string>
    <string name="xn_myimage_savelocal">保存到本地</string>
    <string name="xn_mylocation">我的位置</string>
    <string name="xn_netinvalid_valuation">亲！无网络，评价暂时不可提交</string>
    <string name="xn_newmsg_num">条新消息</string>
    <string name="xn_noevaluat">您还不能对本次会话进行评价，谢谢！</string>
    <string name="xn_normaldialog_title">提 示</string>
    <string name="xn_notify_newmsg">您有新消息哦！</string>
    <string name="xn_offline">亲！客服不在线！</string>
    <string name="xn_phasebook_text">常用语</string>
    <string name="xn_queuing_tips1">抱歉，人数过多您排在第</string>
    <string name="xn_queuing_tips2">位 点击留言！</string>
    <string name="xn_queuing_toast">亲！客服忙碌中，请稍后！</string>
    <string name="xn_recent_person">最近联系人</string>
    <string name="xn_refuse_visitor">是否加入黑名单？</string>
    <string name="xn_releasetotalk">松开手指，取消发送</string>
    <string name="xn_remove_visitor">确定解除黑名单吗？</string>
    <string name="xn_requestkf">正在请求客服...</string>
    <string name="xn_require_evaluation">感谢您的支持，请评价</string>
    <string name="xn_robot_leave_message">留言</string>
    <string name="xn_sdk_havevaluation">已评价</string>
    <string name="xn_sdk_loosestop">松开结束</string>
    <string name="xn_sdk_moreinfo">加载更多...</string>
    <string name="xn_sdk_nomoreinfo">没有更多聊天内容...</string>
    <string name="xn_sdk_presstalk">按住说话</string>
    <string name="xn_sdk_tryuse">试用</string>
    <string name="xn_showphoto_title">发送中...</string>
    <string name="xn_submit">提交</string>
    <string name="xn_swifttorobot">转人工</string>
    <string name="xn_switch_succeed">您已成功拒绝转接邀请!</string>
    <string name="xn_text_pulldown">下拉刷新</string>
    <string name="xn_text_recentlyupdate">最近更新:</string>
    <string name="xn_text_refresh">正在刷新...</string>
    <string name="xn_toast_authority">亲，请开启相关权限</string>
    <string name="xn_toast_callcsfalse">获取客服失败</string>
    <string name="xn_toast_cancel">返回</string>
    <string name="yies_address_chaoyang">朝阳区</string>
    <string name="yies_address_chongwen">崇文区</string>
    <string name="yies_address_dongcheng">东城区</string>
    <string name="yies_address_xicheng">西城区</string>
    <string name="yies_address_xuanwu">宣武区</string>
    <string name="yies_comment_msg_four">Thank you</string>
    <string name="yies_comment_msg_four_point">提交评价后+15分积分</string>
    <string name="yies_comment_msg_four_tip">感谢你的反馈</string>
    <string name="yies_comment_msg_one">这件衣服的尺码合适吗?（+5分)</string>
    <string name="yies_comment_msg_one_big">偏大</string>
    <string name="yies_comment_msg_one_good">合适</string>
    <string name="yies_comment_msg_one_small">偏小</string>
    <string name="yies_comment_msg_three">这件衣服厚吗?（+5分)</string>
    <string name="yies_comment_msg_three_bao">偏薄</string>
    <string name="yies_comment_msg_three_hou">偏厚</string>
    <string name="yies_comment_msg_three_normal">适中</string>
    <string name="yies_comment_msg_two">这件衣服有弹性吗?（+5分)</string>
    <string name="yies_comment_msg_two_no">无弹</string>
    <string name="yies_comment_msg_two_normal">弹性</string>
    <string name="yies_comment_msg_two_small">微弹</string>
    <string name="yies_delete">删除</string>
    <string name="yies_no">取消</string>
    <string name="yies_order_comment_good_level">对这件单品的满意程度</string>
    <string name="yies_orderfinish_go">继续逛</string>
    <string name="yies_orderfinish_pay">立即续费</string>
    <string name="yies_orderfinish_success">下单成功</string>
    <string name="yies_orderfinish_tip1">"“订单完成，
现在邀请好友成为会员，即可获得惊喜好礼“"</string>
    <string name="yies_person_close">关闭</string>
    <string name="yies_person_ok">确定</string>
    <string name="yies_text_size_f">均码</string>
    <string name="yies_text_size_l">L</string>
    <string name="yies_text_size_m">M</string>
    <string name="yies_text_size_s">S</string>
    <string name="yies_text_size_xl">XL</string>
    <string name="yies_text_size_xs">XS</string>
    <string name="yies_update">更新新版本</string>
    <string name="yies_update_content">更新内容</string>
    <string name="yies_update_content_seat">"1.Android版本首次更新
2。欢迎使用
3。优化详情页，修复部分bug
"</string>
    <string name="yies_update_ingore">忽略</string>
    <string name="yies_update_ingore_version">忽略此版本</string>
    <string name="yies_update_submit">更新</string>
    <string name="yies_wish_other_add">添加至其他心愿单</string>
</resources>