<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewFlipper android:id="@id/vfMsg" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:layout_width="fill_parent" android:layout_height="142.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="24.0dip" android:inAnimation="@anim/slide_right_in" android:outAnimation="@anim/slide_left_out">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/tvMsgPreTag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/yies_order_comment_good_level" android:layout_centerHorizontal="true" />
            <com.yiersan.widget.ratingbar.ProperRatingBar android:id="@id/starRatingBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42.0dip" android:layout_below="@id/tvMsgPreTag" android:layout_centerHorizontal="true" app:prb_totalTicks="5" app:prb_defaultRating="0" app:prb_clickable="true" app:prb_tickNormalDrawable="@mipmap/comment_heart_n" app:prb_tickSelectedDrawable="@mipmap/comment_heart_h" app:prb_tickSpacing="12.0dip" app:prb_tickWidth="56.0dip" app:prb_tickHeight="26.0dip" xmlns:app="http://schemas.android.com/apk/res-auto" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/tvMsgOneTag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/yies_comment_msg_one" android:layout_centerHorizontal="true" />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_below="@id/tvMsgOneTag" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgOneSmall" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:text="@string/yies_comment_msg_one_small" />
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgOneGood" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginLeft="24.0dip" android:text="@string/yies_comment_msg_one_good" />
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgOneBig" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginLeft="24.0dip" android:text="@string/yies_comment_msg_one_big" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/tvMsgTwoTag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/yies_comment_msg_two" android:layout_centerHorizontal="true" />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_below="@id/tvMsgTwoTag" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgTwoNo" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:text="@string/yies_comment_msg_two_no" />
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgTwoNormal" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginLeft="24.0dip" android:text="@string/yies_comment_msg_two_normal" />
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgTwoSmall" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginLeft="24.0dip" android:text="@string/yies_comment_msg_two_small" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/tvMsgThreeTag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/yies_comment_msg_three" android:layout_centerHorizontal="true" />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_below="@id/tvMsgThreeTag" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgThreeBao" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:text="@string/yies_comment_msg_three_bao" />
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgThreeNormal" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginLeft="24.0dip" android:text="@string/yies_comment_msg_three_normal" />
                <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_gray" android:gravity="center" android:id="@id/tvMsgThreeHou" android:background="@drawable/comment_msg_selector" android:layout_width="72.0dip" android:layout_height="72.0dip" android:layout_marginLeft="24.0dip" android:text="@string/yies_comment_msg_three_hou" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="24.0sp" android:textColor="@color/text_color_deep" android:id="@id/tvMsgFourTag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/yies_comment_msg_four" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_light" android:id="@id/tvMsgFourTip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/yies_comment_msg_four_tip" android:layout_below="@id/tvMsgFourTag" android:layout_centerHorizontal="true" />
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/tvMsgFourPoint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/yies_comment_msg_four_point" android:layout_below="@id/tvMsgFourTip" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ViewFlipper>
</LinearLayout>