<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/llUpdate" android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_18" android:textColor="@color/text_color_deep" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/yies_update" />
        <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/text_color_deep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/yies_update_content" />
        <View android:background="@color/common_xian" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="6.0dip" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
            <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/tvContent" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/yies_update_content_seat" android:lineSpacingExtra="5.0dip" />
        </ScrollView>
        <LinearLayout android:gravity="center_vertical" android:id="@id/llIngore" android:layout_width="fill_parent" android:layout_height="20.0dip">
            <Button android:id="@id/btnIngoreVersion" android:background="@drawable/button_pay_taste_selector" android:clickable="false" android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="12.0dip" />
            <TextView android:textColor="@color/text_color_deep" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/yies_update_ingore_version" />
        </LinearLayout>
        <View android:background="@color/common_xian" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
            <Button android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/btnIngore" android:background="@color/colorWhite" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/yies_update_ingore" android:layout_weight="1.0" />
            <View android:background="@color/common_xian" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <Button android:textSize="@dimen/text_size_default" android:textColor="@color/text_color_deep" android:id="@id/btnSubmit" android:background="@color/colorWhite" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/yies_update_submit" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>