<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/wishselect_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip">
        <TextView android:textSize="@dimen/text_size_13" android:textColor="#ff8f8e94" android:gravity="center" android:id="@id/tvWishBrandName" android:layout_width="fill_parent" android:layout_height="57.0dip" android:text="@string/app_name" />
        <View android:background="@color/common_xian" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="@dimen/text_size_18" android:textColor="#ff0076ff" android:gravity="center" android:id="@id/tvAddOtherWish" android:layout_width="fill_parent" android:layout_height="57.0dip" android:text="@string/yies_wish_other_add" />
        <View android:background="@color/common_xian" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <TextView android:textSize="@dimen/text_size_18" android:textColor="#fffe3824" android:gravity="center" android:id="@id/tvDeleteWish" android:layout_width="fill_parent" android:layout_height="57.0dip" android:text="@string/yies_delete" />
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_18" android:textColor="#ff0076ff" android:gravity="center" android:id="@id/tvCancelWish" android:background="@drawable/wishselect_selector" android:layout_width="fill_parent" android:layout_height="57.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/yies_no" />
</LinearLayout>